apps/dendrite/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`matrix.mission.arctiq.codegameeat.com`)
      services:
        - name: nginx-service
          port: http
    - kind: Rule
      match: Host(`matrix.mission.arctiq.codegameeat.com`) && PathPrefix(`/_matrix/client/`)
      services:
        - name: client-service
          port: 8070
    - kind: Rule
      match: Host(`matrix.mission.arctiq.codegameeat.com`) && PathPrefix(`/_matrix/federation/`)
      services:
        - name: federation-service
          port: 8070
    - kind: Rule
      match: Host(`matrix.mission.arctiq.codegameeat.com`) && PathPrefix(`/_matrix/key/`)
      services:
        - name: federation-service
          port: 8070
    - kind: Rule
      match: Host(`matrix.mission.arctiq.codegameeat.com`) && PathPrefix(`/_matrix/media/`)
      services:
        - name: media-service
          port: 8070
    - kind: Rule
      match: Host(`matrix.mission.arctiq.codegameeat.com`) && Path(`/_matrix/client/{path:.*?/(sync|user/.*?/filter/?.*|keys/changes|rooms/.*?/(messages|.*?_?members|context/.*?|relations/.*?|event/.*?))}`)
      services:
        - name: sync-service
          port: 8070
  tls:
    certResolver: le
